# clevo-ns50mu-fan-controller-rs

./: .gitignore  Cargo.toml  NS50MU-fan-controller.service  README.md  makefile
src/: main.rs
