[package]
name = "ns50mu_fan_controller_rs"
version = "1.0.0"
authors = ["Santeri Hetekivi"]
edition = "2021"
rust-version = "1.76.0"
description = "Fan controller for Clevo NS50MU."
readme = "README.md"
repository = "https://github.com/SanteriHetekivi/ns50mu-fan-controller_rs/"
license = "Apache-2.0"
keywords = ["NS50MU", "fan", "GNU/Linux"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies.libc]
version = "0.2.153"

[dependencies.x86_64]
version = "0.15.1"
default-features = false
features = ["instructions"]

[dependencies.clap]
version = "4.5.4"

[dependencies.log]
version = "0.4.21"

[dependencies.env_logger]
version = "0.11.3"

[dependencies.clap-verbosity-flag]
version = "2.2.0"
